customer-apps/simplenodeservice-team10-preprod/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "simplenodeservice-team10-preprod-cd"
  labels:
    dt.owner: "team10"
  annotations:
    keptn.sh/lifecycle-toolkit: "enabled"
