customer-apps/simplenodeservice-team10-preprod/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "simplenodeservice-team10"
  namespace: "simplenodeservice-team10-preprod-cd"
  labels:
    dt.owner: "team10"
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: "/"
          #- path: "/simplenodeservice-team10-preprod"
            pathType: Prefix
            backend:
              service:
                name: "simplenodeservice-team10"
                port:
                  number: 80
